SubVersion: $Id$

Log of changes:	tilp (cables, calcs, files, ticonv)

- 25/06/2006, version 0.18 (0.1.1, 0.2.2, 0.2.0, 0.0.3): roms
	- implemented full TiGroup support (ram, archive and flash)
	- fixed NULL dereference in filesel.c (kevin)
	- refresh right frame after var retrieval
	- fixed bad displaying of lists on TI84+ due to bad translation of CalcModel value.

- 18/06/2006, version 0.17 (0.1.1, 0.2.2, 0.2.0, 0.0.3): roms
	- changes in tifiles API (TiGroup)
	- changes in ticalcs API (backup with TiGroup)
	- fixed accelerator keys in popup menu (right frame)
	- added accelarator keys in popup menu (left frame)
	- fixed manpage about DirectLink

- 11/06/2006, version 0.16 (0.1.1, 0.2.1, 0.1.5, 0.0.3): roms
	- removed text argument in pbars: not used because internally set-up by ticalc2
	- reworked management of progress bars
	- fixed mis-use of file selection (mix between local.selection & local.file_selection)
		=> critical bug !
	- B.Moody: "If TiLP detects a cable, but no calculator is connected, then the cable
		will not be uninitialized properly before being reinitialized.  The result
		is that TiLP attempts to open the cable twice." -> patch merged.
	- updates dirlist & memory when sending apps

- 09/06/2006, version 0.15 (0.1.1, 0.2.0, 0.1.5, 0.0.3): roms
	- use reworked dirlist API
	- updated TiLP to follow the slightly modified FLASH app dirlist format
	- fixed 'bug' #1499672: sorting by name is case insensitive for now.
	- fixed bug #1499672: sorting by type didn't work properly on the pc-panel
	- implemented sending of several FLASH app at once
	- allowed simultaneous sending of apps & vars

- 28/05/2006, version 0.14 (0.1.0, 0.1.3, 0.1.4, 0.0.3): roms
	- fixed USB device reconnection
	- reworked device box: display detected USB device in a list as well as full probing list.
	- tilp_device_probe_usb is now restricted to FLASH devices only (faster)
	- "SilverLink is still NACK'ed after error. Does not appear with TiLP1 => open/close 