@@ -2,8 +2,13 @@ SubVersion: $Id$
 
 Log of changes:	tilp (cables, calcs, files, ticonv)
 
-- 25/06/2006, version 0.18 (0.1.1, 0.2.2, 0.2.0, 0.0.3): roms
+- 12/07/2006, version 0.19 (0.1.3, 0.2.3, 0.2.2, 0.0.5): roms
+	- for now, use this naming scheme for TI9x var filenames: folder.var.extension
+	- 
+
+- 25/06/2006, version 0.18 (0.1.1, 0.2.2, 0.2.0, 0.0.4): roms
 	- implemented full TiGroup support (ram, archive and flash)
+	- re-enabled device open/close instead of reset.
 	- fixed NULL dereference in filesel.c (kevin)
 	- refresh right frame after var retrieval
 	- fixed bad displaying of lists on TI84+ due to bad translation of CalcModel value.
